--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CounterApp</string>
+    <string name="incStr">+</string>
+    <string name="decStr">-</string>
+    <string name="resetStr">Reset</string>
 </resources>
